[gd_scene load_steps=7 format=3 uid="uid://ct0x8ef1ohdk5"]

[ext_resource type="Script" uid="uid://b1a0huwcmrado" path="res://projectiles/exchu_li_bladder.gd" id="1_1ihxx"]
[ext_resource type="Texture2D" uid="uid://cmln7hhnfa1vr" path="res://Assets/Projectiles/projectiles2.png" id="2_1ihxx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ihxx"]
radius = 17.3333
height = 34.6667

[sub_resource type="Animation" id="Animation_dx5s2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_08ns1"]
resource_name = "exchu_proj"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecu6h"]
_data = {
&"RESET": SubResource("Animation_dx5s2"),
&"exchu_proj": SubResource("Animation_08ns1")
}

[node name="ExchuLiBladder" type="Area2D"]
collision_layer = 4
collision_mask = 14
script = ExtResource("1_1ihxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1ihxx")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
rotation = -1.5708
texture = ExtResource("2_1ihxx")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 128, 256, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
libraries = {
&"": SubResource("AnimationLibrary_ecu6h")
}

[node name="QFreeTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="QFreeTimer" to="." method="_on_q_free_timer_timeout"]
